-Hide overflow, and make height 100% for body -Fix problems in js -Fix bad wording at WorkspaceMember -Connect a correct js file for members -Cnange member_tab template -Make monobutton flexible depent a user role -Fix urls by adding "/" to end of root

--- a/static/css/modal_style.css
+++ b/static/css/modal_style.css
@@ -1,3 +1,9 @@
+html, body {
+    height: 100%;
+    overflow: hidden;
+}
+
+
 .modal .noborder-input {
     background-color: transparent;
     border: none;
